tests/check/gst/gstdatetime.c
@@ -38,7 +38,11 @@ GST_START_TEST (test_GstDateTime_now)
 
   memset (&tm, 0, sizeof (tm));
   t = time (NULL);
+#ifdef HAVE_LOCALTIME_R
   localtime_r (&t, &tm);
+#else
+  memcpy (&tm, localtime (&t), sizeof (struct tm));
+#endif
   dt = gst_date_time_new_now_local_time ();
   assert_equals_int (gst_date_time_get_year (dt), 1900 + tm.tm_year);
   assert_equals_int (gst_date_time_get_month (dt), 1 + tm.tm_mon);
@@ -51,7 +55,7 @@ GST_START_TEST (test_GstDateTime_now)
 
 GST_END_TEST;
 
-GST_START_TEST (test_GstDateTime_new_from_unix_epoch)
+GST_START_TEST (test_GstDateTime_new_from_unix_epoch_local_time)
 {
   GstDateTime *dt;
   struct tm tm;
@@ -59,8 +63,12 @@ GST_START_TEST (test_GstDateTime_new_from_unix_epoch)
 
   memset (&tm, 0, sizeof (tm));
   t = time (NULL);
+#ifdef HAVE_LOCALTIME_R
   localtime_r (&t, &tm);
-  dt = gst_date_time_new_from_unix_epoch (t);
+#else
+  memcpy (&tm, localtime (&t), sizeof (struct tm));
+#endif
+  dt = gst_date_time_new_from_unix_epoch_local_time (t);
   assert_equals_int (gst_date_time_get_year (dt), 1900 + tm.tm_year);
   assert_equals_int (gst_date_time_get_month (dt), 1 + tm.tm_mon);
   assert_equals_int (gst_date_time_get_day (dt), tm.tm_mday);
@@ -77,13 +85,40 @@ GST_START_TEST (test_GstDateTime_new_from_unix_epoch)
   tm.tm_min = 0;
   tm.tm_sec = 0;
   t = mktime (&tm);
-  dt = gst_date_time_new_from_unix_epoch (t);
+  dt = gst_date_time_new_from_unix_epoch_local_time (t);
   assert_equals_int (gst_date_time_get_year (dt), 1970);
   assert_equals_int (gst_date_time_get_month (dt), 1);
   assert_equals_int (gst_date_time_get_day (dt), 1);
   assert_equals_int (gst_date_time_get_hour (dt), 0);
   assert_equals_int (gst_date_time_get_minute (dt), 0);
   assert_equals_int (gst_date_time_get_second (dt), 0);
+  gst_date_time_unref (dt);
+}
+
+GST_END_TEST;
+
+
+GST_START_TEST (test_GstDateTime_new_from_unix_epoch_utc)
+{
+  GstDateTime *dt;
+  struct tm tm;
+  time_t t;
+
+  memset (&tm, 0, sizeof (tm));
+  t = time (NULL);
+#ifdef HAVE_GMTIME_R
+  gmtime_r (&t, &tm);
+#else
+  memcpy (&tm, gmtime (&t), sizeof (struct tm));
+#endif
+  dt = gst_date_time_new_from_unix_epoch_utc (t);
+  assert_equals_int (gst_date_time_get_year (dt), 1900 + tm.tm_year);
+  assert_equals_int (gst_date_time_get_month (dt), 1 + tm.tm_mon);
+  assert_equals_int (gst_date_time_get_day (dt), tm.tm_mday);
+  assert_equals_int (gst_date_time_get_hour (dt), tm.tm_hour);
+  assert_equals_int (gst_date_time_get_minute (dt), tm.tm_min);
+  assert_equals_int (gst_date_time_get_second (dt), tm.tm_sec);
+  assert_equals_int (gst_date_time_get_time_zone_offset (dt), 0);
   gst_date_time_unref (dt);
 }
 
@@ -96,8 +131,12 @@ GST_START_TEST (test_GstDateTime_get_dmy)
   struct tm tt;
 
   t = time (NULL);
+#ifdef HAVE_LOCALTIME_R
   localtime_r (&t, &tt);
-  dt = gst_date_time_new_from_unix_epoch (t);
+#else
+  memcpy (&tt, localtime (&t), sizeof (struct tm));
+#endif
+  dt = gst_date_time_new_from_unix_epoch_local_time (t);
   assert_equals_int (gst_date_time_get_year (dt), tt.tm_year + 1900);
   assert_equals_int (gst_date_time_get_month (dt), tt.tm_mon + 1);
   assert_equals_int (gst_date_time_get_day (dt), tt.tm_mday);
@@ -191,7 +230,11 @@ GST_START_TEST (test_GstDateTime_utc_now)
   struct tm tm;
 
   t = time (NULL);
+#ifdef HAVE_GMTIME_R
   gmtime_r (&t, &tm);
+#else
+  memcpy (&tm, gmtime (&t), sizeof (struct tm));
+#endif
   dt = gst_date_time_new_now_utc ();
   assert_equals_int (tm.tm_year + 1900, gst_date_time_get_year (dt));
   assert_equals_int (tm.tm_mon + 1, gst_date_time_get_month (dt));
@@ -213,7 +256,11 @@ GST_START_TEST (test_GstDateTime_get_utc_offset)
 
   t = time (NULL);
   memset (&tm, 0, sizeof (tm));
+#ifdef HAVE_LOCALTIME_R
   localtime_r (&t, &tm);
+#else
+  memcpy (&tm, localtime (&t), sizeof (struct tm));
+#endif
 
   dt = gst_date_time_new_now_local_time ();
   ts = gst_date_time_get_time_zone_offset (dt);
@@ -236,7 +283,8 @@ gst_date_time_suite (void)
   tcase_add_test (tc_chain, test_GstDateTime_get_minute);
   tcase_add_test (tc_chain, test_GstDateTime_get_second);
   tcase_add_test (tc_chain, test_GstDateTime_get_utc_offset);
-  tcase_add_test (tc_chain, test_GstDateTime_new_from_unix_epoch);
+  tcase_add_test (tc_chain, test_GstDateTime_new_from_unix_epoch_local_time);
+  tcase_add_test (tc_chain, test_GstDateTime_new_from_unix_epoch_utc);
   tcase_add_test (tc_chain, test_GstDateTime_new_full);
   tcase_add_test (tc_chain, test_GstDateTime_now);
   tcase_add_test (tc_chain, test_GstDateTime_utc_now);
